[package]
name = "order-proxy"
version = "0.1.0"
edition = "2021"
authors = ["conley <congleiwang@qq.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ["http", "axum", "queue"] }
worker-macros = { version = "0.8", features = ["http"] }
axum = { version = "0.8", default-features = false, features = ["json", "macros"] }
axum-macros = "0.5"
tower-service = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "time"] }
tracing-web = "0.1"

[profile.release]
lto = true
strip = true
codegen-units = 1