[package]
name = "worker-demo"
version = "0.1.0"
edition = "2021"
authors = ["conley <congleiwang@qq.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ["http", "queue", "d1"] }
worker-macros = { version = "0.8", features = ["http"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "time"] }
tracing-web = "0.1"
console_error_panic_hook = "0.1.7"

[profile.release]
lto = true
strip = true
codegen-units = 1